// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`last-line-0.js-babylon 1`] = `
"'use strict';~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
"
`;

exports[`last-line-0.js-flow 1`] = `
"'use strict';~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
"
`;

exports[`last-line-0.js-typescript 1`] = `
"'use strict';~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
"
`;

exports[`last-line-1.js-babylon 1`] = `
"'use strict';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
"
`;

exports[`last-line-1.js-flow 1`] = `
"'use strict';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
"
`;

exports[`last-line-1.js-typescript 1`] = `
"'use strict';
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
"
`;

exports[`last-line-2.js-babylon 1`] = `
"'use strict';

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
"
`;

exports[`last-line-2.js-flow 1`] = `
"'use strict';

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
"
`;

exports[`last-line-2.js-typescript 1`] = `
"'use strict';

~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
"
`;

exports[`newline.js-babylon 1`] = `
"/* @flow */

\\"use strict\\";

import a from \\"a\\";

a();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */

\\"use strict\\";

import a from \\"a\\";

a();
"
`;

exports[`newline.js-flow 1`] = `
"/* @flow */

\\"use strict\\";

import a from \\"a\\";

a();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */

\\"use strict\\";

import a from \\"a\\";

a();
"
`;

exports[`newline.js-typescript 1`] = `
"/* @flow */

\\"use strict\\";

import a from \\"a\\";

a();
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/* @flow */

\\"use strict\\";

import a from \\"a\\";

a();
"
`;

exports[`no-newline.js-babylon 1`] = `
"\\"use strict\\";
a
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
a;
"
`;

exports[`no-newline.js-flow 1`] = `
"\\"use strict\\";
a
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
a;
"
`;

exports[`no-newline.js-typescript 1`] = `
"\\"use strict\\";
a
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";
a;
"
`;

exports[`test.js-babylon 1`] = `
"\\"use strict\\";

function fn() {
  \\"use strict\\";
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";

function fn() {
  \\"use strict\\";
}
"
`;

exports[`test.js-flow 1`] = `
"\\"use strict\\";

function fn() {
  \\"use strict\\";
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";

function fn() {
  \\"use strict\\";
}
"
`;

exports[`test.js-typescript 1`] = `
"\\"use strict\\";

function fn() {
  \\"use strict\\";
}
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\\"use strict\\";

function fn() {
  \\"use strict\\";
}
"
`;
